@@ -1,1 +1,17 @@
 # virtual-threads-example-java21
+
+#### simply demonstrating the use of Java Virtual Threads coming with Java 21.
+
+**Prerequisites:**
+
+* [Java 20 with --enable-preview / 21](https://openjdk.net/)
+* [Apache Maven](https:http://maven.apache.org/)
+
+#### How to build and run
+
+Type
+
+```bash
+mvn verify
+```
+to build and run the application on your local environment.
